# OpenTroupe

./: .gitignore  pyproject.toml
src/opentroupe/: __init__.py  agent.py
src/opentroupe/agent/: __init__.py  memory.py  open_person.py
src/opentroupe/agent/prompts/: __init__.py  open_person.py
src/opentroupe/ai/: __init__.py  provider.py
src/opentroupe/ai/openai/: __init__.py  exception.py  provider.py
src/opentroupe/environment/: __init__.py  open_world.py
src/opentroupe/utils/: __init__.py  llm.py  log.py  misc.py  rendering.py  startup.py  validation.py
