[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opentroupe"
version = "0.0.1"
description = "toolbox for LLM-based people simulation, this library is inspired by TinyTroupe."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = []
