[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opentroupe"
version = "0.0.1"
description = "toolbox for LLM-based people simulation, this library is inspired by TinyTroupe."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "chevron",
    "openai"
]

[project.optional-dependencies]
dev = [
    "types-chevron",
    "rich"
]

[tool.ruff]
# line-length = 120
extend-exclude = ["build", "prompts"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "D205",
    'D212',
    'D401',
    "E501",
    "G004",
    "EM101",
    "EM102",
    "TD001",
    "TD002",
    "TD003",
    "TRY003",
    "ANN401",
    "FBT001",
    "FBT002",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
